upgrade to youtrack 6.5.16713 and replace outdated base image with offical ubuntu one